chore: Change properties